--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-markdown": "^2.4.4",
     "reactstrap": "^4.1.1"
   },
   "scripts": {
